<resources>
    <string name="app_name">Personal_Training</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_clientes">Clientes</string>
    <string name="menu_ejercicios">Ejercicios</string>
    <string name="menu_dietas">Dietas</string>
    <string name="menu_rutinas">Rutinas</string>
    <string name="menu_enviar_rutinas">Enviar rutina</string>


    <string-array name="sexo_array">
        <item>Seleccione sexo</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <string-array name="dias_rutina_array">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>


</resources>