<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cliente"
            android:icon="@drawable/ic_gestionar_cliente"
            android:title="@string/menu_clientes" />
        <item
            android:id="@+id/nav_ejercicio"
            android:icon="@drawable/ic_gestionar_ejercicio"
            android:title="@string/menu_ejercicios" />
        <item
            android:id="@+id/nav_dieta"
            android:icon="@drawable/ic_gestionar_dieta"
            android:title="@string/menu_dietas" />
        <item
            android:id="@+id/nav_rutina"
            android:icon="@drawable/ic_gestionar_rutina_entrenamiento"
            android:title="@string/menu_rutinas" />
        <item
            android:id="@+id/nav_enviar_rutina"
            android:icon="@drawable/ic_enviar_rutina_entrenamiento"
            android:title="@string/menu_enviar_rutinas" />
    </group>
</menu>