<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.personal_training.controlador.CCliente"
        android:label="@string/menu_clientes"
        tools:layout="@layout/v_fragment_cliente">
        <action
            android:id="@+id/action_nav_clientes_to_agregarClienteFragment"
            app:destination="@id/agregarClienteFragment" />
        <action
            android:id="@+id/action_nav_clientes_to_editarClienteFragment"
            app:destination="@id/editarClienteFragment" />
    </fragment>

    <fragment
        android:id="@+id/agregarClienteFragment"
        android:name="com.example.personal_training.controlador.CAgregarClienteFragment"
        android:label="Agregar Cliente"
        tools:layout="@layout/v_fragment_agregar_cliente" />

    <fragment
        android:id="@+id/editarClienteFragment"
        android:name="com.example.personal_training.controlador.CEditarClienteFragment"
        android:label="Editar Cliente"
        tools:layout="@layout/v_fragment_editar_cliente" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.personal_training.controlador.CRutina"
        android:label="@string/menu_rutinas"
        tools:layout="@layout/fragment_rutinas" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.personal_training.controlador.CDieta"
        android:label="@string/menu_dietas"
        tools:layout="@layout/v_fragment_dieta" >
        <action
            android:id="@+id/action_nav_dietas_to_agregarDietaFragment"
            app:destination="@id/agregarDietaFragment" />
        <action
            android:id="@+id/action_nav_dietas_to_editarDietaFragment"
            app:destination="@id/editarDietaFragment" />

    </fragment>

    <fragment
        android:id="@+id/agregarDietaFragment"
        android:name="com.example.personal_training.controlador.CAgregarDietaFragment"
        android:label="Agregar Dieta"
        tools:layout="@layout/v_fragment_agregar_dieta" />

    <fragment
        android:id="@+id/editarDietaFragment"
        android:name="com.example.personal_training.controlador.CEditarDietaFragment"
        android:label="Editar Cliente"
        tools:layout="@layout/v_fragment_editar_dieta" />


</navigation>